# Resnet18-Porting-On-Qualcomm-Hexagon

./: .gitignore
App/: README.md  app.py
App/templates/: index.html
CPP_RELATED/: CMakeLists.txt  arm_calculate_accuracy.cpp  build_cal_accuracy_arm.sh  calculate_accuracy.cpp  commands.txt  set_env.sh  snapdragon_dsp_tools_setup.txt  video_infer_x86.cpp
CPP_RELATED/demo_cpp_app/: README.md  build.sh  build_android_snpe.sh  deploy_demo_snpe.sh  main.cpp  main_snpe.cpp  run_demo_snpe.sh
CPP_RELATED/dsp_infer_accuracy/: MODEL_DEPLOYMENT_EXPLAINED.md  README.md  build_arm.sh  build_dsp.sh  commands.txt  compute_accuracy.py  convert_onnx_to_dlc.sh  deploy_qnn.sh  deploy_snpe.sh  make_nhwc_input_onnx.py  model.cpp  model_net.json  onnx_simplified.py  prepare_cifar10_inputs.py  prepare_cifar10_inputs_snpe.py  resnet18_cifar10_net.json  run_qnn_infer.sh  run_snpe_infer.sh
CPP_RELATED/dsp_infer_accuracy/arm/: main.cpp
CPP_RELATED/dsp_infer_accuracy/dsp/: cifar10_infer_imp.c
CPP_RELATED/dsp_infer_accuracy/idl/: cifar10_infer.idl
CPP_RELATED/dsp_infer_accuracy/inc/: cifar10_infer.h
CPP_RELATED/vec_dot_example/: README.md  build_arm.sh  build_dsp.sh
CPP_RELATED/vec_dot_example/arm/: main.cpp
CPP_RELATED/vec_dot_example/dsp/: vec_dot_imp.c
CPP_RELATED/vec_dot_example/idl/: vec_dot.idl
CPP_RELATED/vec_dot_example/inc/: vec_dot.h
Training/: README.md  data_module.py  find_lr.py  model_module.py  onnx_dump.py  train.py
